# cyber-defense-env

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  fix_app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  attack_simulator.py  cyber_env.py  reward.py
server/: app.py
tasks/: __init__.py  graders.py
tests/: test_presubmission.py
