[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cyber-defense-env"
version = "1.0.0"
description = "Adaptive Cyber Defense Environment - OpenEnv compatible RL environment"
readme = "README.md"
license = {text = "MIT"}
 requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:main"

[tool.uv]
dev-dependencies = []